[tool.poetry]
name = "relayer-python-sdk"
version = "0.1.0"
description = "Python SDK for interacting with the Relayer WS API"
authors = ["Suryansh Chauhan <***REMOVED***>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
