[tool.poetry]
name = "relayer-python-sdk"
version = "0.1.2"
description = "Python SDK for interacting with the Relayer WS API"
authors = ["Suryansh Chauhan <suryanshchauhan2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
